refactored code base added fine tuned model and simplified pipelines for generations
